kubernetes/longhorn/overlays/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ui
  namespace: longhorn-system
  labels:
    app: longhorn-ui
    app.kubernetes.io/instance: longhorn-system
spec:
  host: longhorn.apps.okd.<path:secret/data/gitlab/domain#url>
  to:
    kind: Service
    name: longhorn-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
